<resources>
    <string name="app_name">Refiq</string>
    <string name="title_home">Home</string>
    <string name="title_new">New</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_connect_wallet">Home</string>
    <string name="connect_to_the_eth_wallet">Connect to the eth wallet</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_topic">Search Topics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topic">Topic</string>
    <string name="check_out_topic_info">Check out topic info</string>
    <string name="import_a_wallet">Import a wallet</string>
    <string name="create_a_new_wallet">Create a new wallet</string>
    <string name="please_enter_a_password_for_the_wallet">Please enter the wallet password</string>
    <string name="continue_enter_password">Continue</string>
    <string name="title_enter_password">Enter password</string>
    <string name="title_new_wallet">New Wallet</string>
    <string name="new_wallet_title">Your Secret Phrase</string>
    <string name="newwallet_description">Write down or copy these words in the right order and save them somewhere safe.</string>
    <string name="copy_secret_phrase">COPY</string>
    <string name="newwallet_done">Done</string>
    <string name="walletInfo_balance">BALANCE:</string>
    <string name="walletinfo_address">ADDRESS:</string>
    <string name="importwallet_paste">PASTE</string>
    <string name="newtopic_">New Topic</string>
    <string name="newtopic">New Topic</string>
    <string name="newpost">New Post\n</string>
    <string name="title_create_topic">Create Topic</string>
    <string name="create">Create</string>
    <string name="add_post_topic">Add a post to the Topic</string>
    <string name="add_comment">Add a comment</string>
    <string name="post">Post</string>
    <string name="comment">Comment</string>
</resources>