<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wallet.WalletFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/wallet_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/baseline_close_24"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="48sp"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/wallet_logo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fist_bump"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wallet_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_a_new_wallet"
        app:layout_constraintBottom_toTopOf="@id/wallet_import"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:textSize="16sp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/radius_border"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wallet_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="128dp"
        android:text="@string/import_a_wallet"
        android:padding="16dp"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/radius_border"
        android:textSize="16sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>